# propono

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  configure.ac
data/: MATE_ProponoApplet.xml  Makefile.am  org.freedesktop.Telepathy.Client.Propono.service.in  propono-fav-ui.xml  propono-file.desktop.in.in  propono-mime.xml.in  propono-ui.xml  propono.1  propono.desktop.in.in  propono.pc.in  propono.schemas.in.in
data/icons/: Makefile.am
debian/: NEWS  changelog  control  copyright  menu  propono.install  rules  watch
help/: ChangeLog  Makefile.am
help/C/: propono.xml
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/oc/: oc.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/sq/: sq.po
help/sv/: sv.po
help/th/: th.po
help/zh_CN/: zh_CN.po
m4/: mate-doc-utils.m4
plugin-loaders/c/: Makefile.am  propono-plugin-loader-c.c  propono-plugin-loader-c.h
plugins/ssh/: Makefile.am  propono-ssh-connection.c  propono-ssh-connection.h  propono-ssh-plugin.c  propono-ssh-plugin.h  propono-ssh-tab.c  propono-ssh-tab.h  ssh.propono-plugin.desktop.in
plugins/vnc/: Makefile.am  propono-vnc-connection.c  propono-vnc-connection.h  propono-vnc-listener-dialog.c  propono-vnc-listener-dialog.h  propono-vnc-listener.c  propono-vnc-listener.h  propono-vnc-plugin.c  propono-vnc-plugin.h  propono-vnc-tab.c  propono-vnc-tab.h  propono-vnc-tunnel.c  propono-vnc-tunnel.h  vnc.propono-plugin.desktop.in
po/: ChangeLog  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  be@latin.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  ku.po  lt.po  lv.po  mai.po  mk.po  ml.po  (+28 more)
propono/: MATE_ProponoApplet.server.in.in  Makefile.am  handler.c  handler.h  propono-app.c  propono-app.h  propono-applet.c  propono-bacon.c  propono-bacon.h  propono-bookmarks-entry.c  propono-bookmarks-entry.h  propono-bookmarks-migration.c  propono-bookmarks-migration.h  propono-bookmarks-tree.c  propono-bookmarks-tree.h  propono-bookmarks-ui.c  propono-bookmarks-ui.h  propono-bookmarks.c  propono-bookmarks.h  propono-cache-prefs.c  propono-cache-prefs.h  propono-commands.c  propono-commands.h  propono-connect.c  propono-connect.h  propono-connection.c  propono-connection.h  propono-debug.c  propono-debug.h  propono-dirs.c  propono-dirs.h  propono-dnd.h  propono-fav.c  propono-fav.h  propono-main.c  propono-mdns.c  propono-mdns.h  propono-notebook.c  propono-notebook.h  propono-object-module.c  (+32 more)
propono/view/: Makefile.am
