include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = propono
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 

DOC_FIGURES = \
	figures/propono-screenshot.png	\
	figures/propono-auth-needed.png	\
	figures/propono-bookmarks-side-panel.png	\
	figures/propono-connect-dialog.png	\
	figures/propono-editing-bookmarks.png	\
	figures/propono-saving-bookmarks.png

DOC_LINGUAS = ca cs de el en_GB es fr it oc pl pt pt_BR sq sv th zh_CN

-include $(top_srcdir)/git.mk
